[gd_scene load_steps=18 format=3 uid="uid://cp815mpgfya5x"]

[ext_resource type="Theme" uid="uid://b8v02hn8g813h" path="res://assets/sisyphus_theme.tres" id="1_0ed4t"]
[ext_resource type="Script" uid="uid://csfc7r40xa3il" path="res://scripts/upgrade_shop.gd" id="1_mxpyc"]
[ext_resource type="PackedScene" uid="uid://dr47827icsavk" path="res://scenes/upgrade_button.tscn" id="3_0lay5"]
[ext_resource type="Texture2D" uid="uid://w7y8qtxulwaf" path="res://assets/greek_wave.png" id="4_pacmv"]
[ext_resource type="Resource" uid="uid://bx6nnvros30r3" path="res://upgrades/autobuy_strength_upgrade.tres" id="4_q1psx"]
[ext_resource type="Resource" uid="uid://dgcolyhhop461" path="res://upgrades/autobuy_weight_upgrade.tres" id="5_8goot"]
[ext_resource type="Resource" uid="uid://deaxcdfpqhaf3" path="res://upgrades/double_day_length_upgrade.tres" id="6_gc2o6"]
[ext_resource type="Resource" uid="uid://d0cglcinilrib" path="res://upgrades/strength_cost_discount.tres" id="7_jbnth"]
[ext_resource type="Resource" uid="uid://nbo6nji8qlbc" path="res://upgrades/weight_cost_discount.tres" id="8_3xpl5"]
[ext_resource type="Resource" uid="uid://3c1jh5gaqbgg" path="res://upgrades/flat_day_length_upgrade.tres" id="9_ojws6"]
[ext_resource type="Resource" uid="uid://yyt2iaasldag" path="res://upgrades/weight_per_strength_upgrade.tres" id="10_3r51h"]
[ext_resource type="Resource" uid="uid://o8grqfqtvjav" path="res://upgrades/strength_per_suffering_upgrade.tres" id="11_57m7w"]
[ext_resource type="Resource" uid="uid://dr5fu2csokobi" path="res://upgrades/autoreflect_upgrade.tres" id="12_8goot"]
[ext_resource type="Resource" uid="uid://c2wccdat8dyt1" path="res://upgrades/permanent_day_length_flat_upgrade.tres" id="13_gc2o6"]
[ext_resource type="Resource" uid="uid://d3b3j010ihs5" path="res://upgrades/passive_meaning_per_second.tres" id="13_jbnth"]
[ext_resource type="Resource" uid="uid://okkhusfcphwr" path="res://upgrades/autoascend_upgrade.tres" id="15_3xpl5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ed4t"]
bg_color = Color(0.878431, 0.431373, 0.0156863, 1)

[node name="UpgradeShop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_0ed4t")
script = ExtResource("1_mxpyc")
upgrade_button_scene = ExtResource("3_0lay5")
upgrade_resources = Array[Resource]([ExtResource("4_q1psx"), ExtResource("5_8goot"), ExtResource("12_8goot"), ExtResource("13_gc2o6"), ExtResource("11_57m7w"), ExtResource("10_3r51h"), ExtResource("9_ojws6"), ExtResource("7_jbnth"), ExtResource("8_3xpl5"), ExtResource("13_jbnth"), ExtResource("6_gc2o6"), ExtResource("15_3xpl5")])

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_0ed4t")
theme_override_styles/panel = SubResource("StyleBoxFlat_0ed4t")

[node name="Parallax2D" type="Parallax2D" parent="."]
unique_name_in_owner = true
repeat_size = Vector2(1920, 0)

[node name="GreekWave" type="TextureRect" parent="Parallax2D"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("4_pacmv")

[node name="Parallax2D2" type="Parallax2D" parent="."]
unique_name_in_owner = true
scroll_offset = Vector2(1925, 585)
repeat_size = Vector2(1920, 0)

[node name="GreekWave2" type="TextureRect" parent="Parallax2D2"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -384.0
offset_right = 1536.0
offset_bottom = 64.0
grow_horizontal = 2
texture = ExtResource("4_pacmv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2

[node name="ShopLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Meditations"

[node name="Control5" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2

[node name="LabelContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MeaningLabel" type="Label" parent="MarginContainer/VBoxContainer/LabelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Meaning: "

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/LabelContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="HappinessLabel" type="Label" parent="MarginContainer/VBoxContainer/LabelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Happiness: "

[node name="UpgradeContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
columns = 4

[node name="StrengthGainButton" type="Button" parent="MarginContainer/VBoxContainer/UpgradeContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "strength"

[node name="StrengthCostButton" type="Button" parent="MarginContainer/VBoxContainer/UpgradeContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="WeightGainButton" type="Button" parent="MarginContainer/VBoxContainer/UpgradeContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="WeightCostButton" type="Button" parent="MarginContainer/VBoxContainer/UpgradeContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="AutobuyStrengthButton" type="Button" parent="MarginContainer/VBoxContainer/UpgradeContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="AutobuyWeightButton" type="Button" parent="MarginContainer/VBoxContainer/UpgradeContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="DayLengthFlatButton" type="Button" parent="MarginContainer/VBoxContainer/UpgradeContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="DayLengthMultButton" type="Button" parent="MarginContainer/VBoxContainer/UpgradeContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "    Toil    "

[node name="Control4" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/UpgradeContainer/StrengthGainButton" to="." method="_on_strength_gain_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/UpgradeContainer/StrengthCostButton" to="." method="_on_strength_cost_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/UpgradeContainer/WeightGainButton" to="." method="_on_weight_gain_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/UpgradeContainer/WeightCostButton" to="." method="_on_weight_cost_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/UpgradeContainer/AutobuyStrengthButton" to="." method="_on_autobuy_strength_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/UpgradeContainer/AutobuyWeightButton" to="." method="_on_autobuy_weight_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/UpgradeContainer/DayLengthFlatButton" to="." method="_on_day_length_flat_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/UpgradeContainer/DayLengthMultButton" to="." method="_on_day_length_mult_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
